# taskerplusplus

./: .gitignore  .ignore  CMakeLists.txt  README.md  compile_commands.json  justfile  main.cpp  vcpkg.json  xmake.lua
src/: main.cpp  store.cpp  store.h
